@@ -27,6 +27,7 @@ to be shown when they shouldn't even after the mouse has left the window.
 +Fix Unicode handling issue in Replace All feature.
 +Fix issue where cursor would still appear active in the text buffer even when
 it did not have the keyboard focus.
++Fix DeadObject error that could occur after deletion of a secondary main window.
 
 #-----------------------------------------------------------------------------#
 
